--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "meme-generator",
   "version": "0.1.0",
-  "homepage": "https://jennyberry.github.io/meme-generator",
+  "homepage": "https://jennyberry.github.io/Meme-generator",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
